Commit a album.html, se olvido en el anteriro :/

--- a/album.html
+++ b/album.html
@@ -278,7 +278,7 @@
             <img src="img/Icono-Paloma.jpg" class="card-img-top card-img-centered" style="max-width: 50px;" alt="Imagen de ejemplo">
             <div class="card-body">
                 <h5 class="card-title">Plataforma más completa del mercado</h5>
-                <p class="card-text">Este es un ejemplo de tarjeta sin bordes en Bootstrap.</p>
+                <p class="card-text">Ofrece una solución integral que cubre todo el proceso de factoraje, desde la presentación de las facturas hasta el seguimiento de los pagos</p>
             </div>
         </div>
     </div>
@@ -287,7 +287,7 @@
             <img src="img/Icono-Paloma.jpg" class="card-img-top card-img-centered" style="max-width: 50px;" alt="Imagen de ejemplo">
             <div class="card-body">
                 <h5 class="card-title">Facilidad de uso</h5>
-                <p class="card-text">Este es un ejemplo de tarjeta sin bordes en Bootstrap.</p>
+                <p class="card-text">Cuenta con una interfaz intuitiva y amigable para todos los usuarios, lo que facilita su uso y adopción.</p>
             </div>
         </div>
     </div>
@@ -299,7 +299,7 @@
             <img src="img/Icono-Paloma.jpg" class="card-img-top card-img-centered" style="max-width: 50px;" alt="Imagen de ejemplo">
             <div class="card-body">
                 <h5 class="card-title">Seguridad</h5>
-                <p class="card-text">Este es un ejemplo de tarjeta sin bordes en Bootstrap.</p>
+                <p class="card-text">Está diseñada con altos estándares de calidad y seguridad, lo que garantiza la protección de los datos de los usuarios.</p>
             </div>
         </div>
     </div>
@@ -308,7 +308,7 @@
             <img src="img/Icono-Paloma.jpg" class="card-img-top card-img-centered" style="max-width: 50px;" alt="Imagen de ejemplo">
             <div class="card-body">
                 <h5 class="card-title">Flexibilidad</h5>
-                <p class="card-text">Este es un ejemplo de tarjeta sin bordes en Bootstrap.</p>
+                <p class="card-text">Se adapta a las necesidades específicas de cada cliente.</p>
             </div>
         </div>
     </div>
@@ -320,7 +320,7 @@
             <img src="img/Icono-Paloma.jpg" class="card-img-top card-img-centered" style="max-width: 50px;" alt="Imagen de ejemplo">
             <div class="card-body">
                 <h5 class="card-title">Eficiencia</h5>
-                <p class="card-text">Este es un ejemplo de tarjeta sin bordes en Bootstrap.</p>
+                <p class="card-text">Automatiza el proceso de factoraje, incrementa la eficiencia y reduce los costos al automatizar procesos manuales que toman tiempo y consumen recursos.</p>
             </div>
         </div>
     </div>
